--- a/styles.css
+++ b/styles.css
@@ -47,18 +47,22 @@ h1 {
 
 form {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
     color: var(--txt-color);
+    justify-content: space-evenly;
 }
 
 input[type="text"] {
+    width: 55%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-right: 10px;
+    margin-bottom: 25px;
 }
 
 button {
